Finished all markdown and html variations

--- a/p1/01.md
+++ b/p1/01.md
@@ -29,11 +29,57 @@
 #### Substitute: Gluten-Free or Vegan Bun for 2
 
 - Pulled Pork (Made with coleslaw and House Pickles ), $14.99
-- Brisket (Made with burnt end mayo and tobacco onions), $16.99
+- Brisket (Made with Burnt End Mayo and Tobacco Onions), $16.99
 - Cherry Smoked Salmon (Served cold and made with pickled onions, roasted red pepper, greens, smoked tomato mayo), $16.99
 - BLT (Made with Bacon, Smoked Tomato, Lettuce, Smoked Paprika Aioli), $13.99
 - Fried Jalapeno + Cheddar Bologna (Made with chow chow, Honey Grain Mustard), $13.99
 - Grilled Cheese (Made with white American Cheese + Pimento Cheese), $16.99 for Brisket Variation; $14.99 for Pulled Chicken Variation
+- Falaefel Burger (Made with Flaxseed Mayo, Greens, Pepper Jelly), $13.99 
+- Oklahoma Bacon Cheeseburger (Made with White American Cheese, Grilled Onions, S+S 1000 Sauce), $12.99 for a single patty; $15.99 for double patties
+- Chicken Caesar Wrap (Made with Caesar Dressing, Romaine Lettuce, Croutons, Grilled Flour Tortila), $13.99 for smoked chicken variation and the buffalo chicken variation 
+
+### Plates
+#### Served With a Bacon & Cheddar Popover, Comes WIth Two Sides 
+- Pulled Pork, $18.99
+- Brisket, $22.99
+- Pulled Chicken, $18.99
+- Smoked Wings, $20.99
+- St Louis Cut Ribs, 1/2 Rack is $19.99; Full Rack is $29.99
+- Fried Jalapeno + Cheddar Bologna, $17.99
+##### Bestie Combo
+- 2 Meats for $21.99
+- 3 Meats for $25.99
+- 4 Meats for $29.99
+
+### Sides 
+- Beef Fat Fries, $5.99
+- Pit Beans with Smoked Bacon, $4.99 
+- Sweet Pepper Potato Salad, $3.99
+- Coleslaw $3.99
+- White Cheddar Cracker Mac, $5.99
+- Green Bean + Tomato Salad, $4.99
+- Creamed Corn $5.99
+- Brisket Chili $4.99
+- Special Side $4.99
+
+### Dessert 
+- Lemon Gooey Butter Cake (Made with Mixed Berry Compote, Whipped Cream), $8.99
+- Darked Chocolate Brownie (Served Warm and Made with Choc fudge, Vanilla Ice Cream), $7.99
+- Browned Butter Pecan Bar (Made with Carmel Sauce, Whipped Cream), $9.99
+- Ice Cream + Sorbet, Three Scoops is $5.99, A La Mode Variation is $2.99, options include French Vanilla, Cookies & Cream, Chocolate, Sorbet 
+
+### Fountain Sodas
+- Excel Bottoling Company Beverages, $2.99
+    - Lucky Club Soda 
+    - Diety Lucky Club Soda
+    - Sparking Life Lemon/Lime
+    - Frostie Root Beer
+    - Lemonade 
+    - Black Cherry 
+    - R-Pep
+    - Ski
+- Iced Tea (Sweet or Unsweet), $2.99
+- Sam Pellegrino ($2.99)
 
 
 
