--- a/p1/01.md
+++ b/p1/01.md
@@ -16,7 +16,7 @@
 
 ### Salads
 
-#### Half, $8.99; Side, $4.99; Full, $13.99
+**Half $8.99 - Side $4.99  - Full $13.99**
 - **Caesar Salad**
 - **Kale Crunch Salad**
 - **Mix Green Salad**
@@ -25,9 +25,9 @@
     - Brisket or Cherry Smoked Salmon, $6.00 
     - Pulled Porked, Falafel, Fried Jalapeno + Cheddar Cheese, Croutons, and White Balsamic Vinaigrette, $5.00 each 
 
-### Sandwiches (Served with choice of one side)
-#### Substitute: Gluten-Free or Vegan Bun for 2
-
+**Served with choice of one side**  
+*Substitute Gluten-Free or Vegan Bun for $2*
+### Sandwiches
 - Pulled Pork (Made with coleslaw and House Pickles ), $14.99
 - Brisket (Made with Burnt End Mayo and Tobacco Onions), $16.99
 - Cherry Smoked Salmon (Served cold and made with pickled onions, roasted red pepper, greens, smoked tomato mayo), $16.99
@@ -39,7 +39,7 @@
 - Chicken Caesar Wrap (Made with Caesar Dressing, Romaine Lettuce, Croutons, Grilled Flour Tortila), $13.99 for smoked chicken variation and the buffalo chicken variation 
 
 ### Plates
-#### Served With a Bacon & Cheddar Popover, Comes WIth Two Sides 
+**Served with a Bacon & Cheddar Popover + Two Sides**
 - Pulled Pork, $18.99
 - Brisket, $22.99
 - Pulled Chicken, $18.99
